--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -8,6 +8,9 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 2rem;
 }
 
 .nav-links li {
@@ -15,18 +18,17 @@
 }
 
 .nav-links a {
-    border: 1px solid transparent;
-    color: #292929;
+    color: #fff;
     text-decoration: none;
-    padding: 0.5rem;
+    padding: 0.5rem 2rem;
+    transition: all 0.2s ease-in-out;
 }
 
 .nav-links a:hover,
 .nav-links a:active,
 .nav-links a.active {
-    background: #f8df00;
-    border-color: #292929;
     color: #292929;
+    background-color: #fff;
 }
 
 .nav-links button {
@@ -51,6 +53,7 @@
 @media (min-width: 768px) {
     .nav-links {
         flex-direction: row;
+        font-size: 1.2rem;
     }
 
     .nav-links li {
