--- a/src/shared/components/Navigation/MainNavigation.css
+++ b/src/shared/components/Navigation/MainNavigation.css
@@ -10,6 +10,10 @@
     cursor: pointer;
 }
 
+.main-navigation__menu-btn:focus {
+    outline: none;
+}
+
 .main-navigation__menu-btn span {
     display: block;
     width: 3rem;
