--- a/src/shared/components/Navigation/NavLinks.css
+++ b/src/shared/components/Navigation/NavLinks.css
@@ -22,6 +22,7 @@
     text-decoration: none;
     padding: 0.5rem 2rem;
     transition: all 0.2s ease-in-out;
+    border-radius: 5px;
 }
 
 .nav-links a:hover,
