--- a/src/places/components/PlaceItem.css
+++ b/src/places/components/PlaceItem.css
@@ -4,6 +4,10 @@
 
 .place-item__content {
     padding: 0;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .place-item__info {
@@ -56,5 +60,11 @@
 @media (min-width: 768px) {
     .place-item__image {
         height: 20rem;
+    }
+
+    .place-item {
+        flex: 1;
+        margin-right: 1rem;
+        min-width: 25%;
     }
 }
